--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -100,7 +100,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <div class="showhideswitch mt-2">
-                <input (change)="onSetLinks('linkedin', $event?.target?.value);" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch5" >
+                <input (change)="onSetLinks('linkedin', $event?.target?.checked);" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch5" >
                 <label class="showhideswitch-label" for="myshowhideswitch5">
                   <span class="showhideswitch-inner"></span>
                   <span class="showhideswitch-switch"></span>
