--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -3,15 +3,15 @@
   <div class="row mt-5">
     <div class="col-lg-12 col-md-6">
       <label>{{"postYourResume.handsOnExperience" | translate }}</label>
+      <div appMarkAsterisk></div>
     </div>
   </div>
     <div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
       <ng-container [formGroup]="ticket">
         <div class="col-lg-5 col-md-8">
           <ngx-select
-          class="text-uppercase"
-          appMarkAsterisk
-          [placeholder]="'skill'"
+          class="text-capitalize"
+          [placeholder]="'Select Skills'"
           [items]="skillItems"
           formControlName="skill_id"
           optionValueField="id"
@@ -62,7 +62,7 @@
         <label>{{"postJob.knowledgeOnOtherSapSkills" | translate }} </label>
         <ngx-select
         class="text-capitalize"
-        [placeholder]="'skill'"
+        [placeholder]="'Select Skills'"
         [multiple]="true"
         appMarkAsterisk
         [items]="skillItems"
@@ -92,7 +92,7 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.programmingSkills" | translate }}</label>
-        <ng-select id="programmingSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select id="programmingSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Ex. Javascript, Php" appendTo="body" multiple="true"
           formControlName="programming_skills">
         </ng-select>
         <app-control-messages [control]="f['programming_skills']"></app-control-messages>
@@ -103,7 +103,7 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postYourResume.others" | translate }}</label>
-        <ng-select id="othersSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select id="othersSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Ex. Docker, Azure" appendTo="body" multiple="true"
           formControlName="other_skills">
         </ng-select>
       </div>
@@ -113,7 +113,7 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.certification" | translate }} </label>
-        <ng-select id="programmingSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select id="programmingSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Ex. AWS, Java" appendTo="body" multiple="true"
           formControlName="certification">
         </ng-select>
       </div>
