--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -26,7 +26,7 @@
 							<div class="media">
 								<img [src]="userPhotoInfo?.base64 ? convertToImage(userPhotoInfo?.base64) : 'assets/images/user-img-icon.jpg'">
 								<div class="media-body">
-									<h6>{{userInfo?.phone}}	</h6>
+									<h6>{{childForm?.value?.personalDetails?.phone}}	</h6>
                   <h6><a href="mailto:peter-parker2010@gmail.com">{{userInfo?.email}}</a> <span class="mx-2">||</span>
                     {{childForm?.value?.personalDetails?.city ? childForm?.value?.personalDetails?.city + ', ' : ''}}
                     {{childForm?.value?.personalDetails?.state ? childForm?.value?.personalDetails?.state + ', ' : ''}}
@@ -130,7 +130,7 @@
 				<div class="col-lg-8 info">
 					<ul class="list-group">
 					  <li class="list-group-item">
-              {{childForm?.value?.jobPref?.availability == 0 ? 'Immediate' : childForm?.value?.jobPref?.availability + 'Days'}}
+              {{childForm?.value?.jobPref?.availability == 0 ? 'Immediate' : childForm?.value?.jobPref?.availability + ' Days'}}
             </li>
 					  <!-- <li class="list-group-item text-capitalize">{{childForm?.value?.jobPref?.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)}}</li> -->
 					  <li class="list-group-item">
