Working on issues

--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -3,14 +3,14 @@
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"postYourResume.firstName" | translate }}</label>
-          <input appMarkAsterisk formControlName="first_name" type="text" class="form-control" placeholder="First Name" value="Jacky">
+          <input appMarkAsterisk formControlName="first_name" type="text" class="form-control" placeholder="First Name">
           <app-control-messages [control]="f['first_name']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"postYourResume.lastName" | translate }}</label>
-          <input appMarkAsterisk formControlName="last_name" type="text" class="form-control" placeholder="Last Name" value="Smith">
+          <input appMarkAsterisk formControlName="last_name" type="text" class="form-control" placeholder="Last Name">
           <app-control-messages [control]="f['last_name']"></app-control-messages>
         </div>
       </div>
