--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -5,7 +5,7 @@
       <div class="col-lg-2 col-md-5">
         <div class=" form-group">
           <label>{{"postYourResume.degree" | translate }} </label>
-          <select (change)="onChangeDegreeValue($event?.target?.value)" formControlName="degree" class="form-control">
+          <select (change)="onChangeDegreeValue($event?.target?.value)" formControlName="degree" class="form-control text-capitalize">
             <option [value]="''">{{"common.select" | translate }} {{"postYourResume.degree" | translate }}
             </option>
             <ng-container *ngFor="let education of educations; let i = index">
@@ -20,14 +20,14 @@
       <div class="col-lg-4 col-md-5">
         <div class=" form-group">
           <label>{{"postYourResume.fieldOfStudy" | translate }}</label>
-          <input formControlName="field_of_study" type="text" class="form-control" [placeholder]="'postYourResume.fieldOfStudy' | translate">
+          <input formControlName="field_of_study" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.fieldOfStudy' | translate">
           <app-control-messages [control]="ticket['controls']['field_of_study']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-2 col-md-5">
         <div class=" form-group">
           <label>{{"postYourResume.yearOfCompletion" | translate }}</label>
-          <input numbersOnly formControlName="year_of_completion" type="text" class="form-control" [placeholder]="'postYourResume.yearOfCompletion' | translate">
+          <input numbersOnly formControlName="year_of_completion" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.yearOfCompletion' | translate">
           <app-control-messages [control]="ticket['controls']['year_of_completion']"></app-control-messages>
         </div>
       </div>
@@ -59,7 +59,7 @@
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postYourResume.currentEmployer" | translate }}</label>
-        <input appMarkAsterisk formControlName="current_employer" type="text" class="form-control" placeholder="Current Employer Name">
+        <input appMarkAsterisk formControlName="current_employer" type="text" class="form-control text-capitalize" placeholder="Current Employer Name">
         <app-control-messages [control]="f['current_employer']"></app-control-messages>
       </div>
     </div>
@@ -69,7 +69,7 @@
     <div class="col-lg-9 ">
       <div class=" form-group">
         <label>{{"postYourResume.currentRole" | translate }}</label>
-        <input appMarkAsterisk formControlName="current_employer_role" type="text" class="form-control" placeholder="Current Role">
+        <input appMarkAsterisk formControlName="current_employer_role" type="text" class="form-control text-capitalize" placeholder="Current Role">
         <app-control-messages [control]="f['current_employer_role']"></app-control-messages>
       </div>
     </div>
