--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -15,7 +15,8 @@
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postYourResume.rolesLookingFor" | translate }}</label>
-        <input appMarkAsterisk formControlName="job_role" type="text" class="form-control" [placeholder]="'postYourResume.rolesLookingFor' | translate">
+        <input appMarkAsterisk formControlName="job_role" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.rolesLookingFor' | translate">
+        <app-control-messages [control]="f['job_role']"></app-control-messages>
       </div>
     </div>
   </div>
@@ -48,7 +49,7 @@
   </div>
   <div class="row mt-2">
 
-    <!-- <div class="col-lg-6 col-md-6">
+    <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.workAuthorization" | translate }}</label>
         <div appMarkAsterisk class="mt-2">
@@ -56,30 +57,15 @@
             <input (change)="onChangeFieldValue('work_authorization', 0)" [value]="0" formControlName="work_authorization" type="radio" id="customRadioInline5"
               name="work_authorization" class="custom-control-input">
             <label class="custom-control-label"
-              for="customRadioInline5">{{"postJob.shouldBeACitizenPr" | translate }}</label>
+              for="customRadioInline5">{{"postYourResume.iHaveWorkAuthorization" | translate }}</label>
           </div>
           <div class="custom-control custom-radio custom-control-inline">
             <input (change)="onChangeFieldValue('work_authorization', 1)" [value]="1" formControlName="work_authorization" type="radio" id="customRadioInline6"
               name="work_authorization" class="custom-control-input">
             <label class="custom-control-label"
-              for="customRadioInline6">{{"postJob.shouldBeHavingAWorkPermit" | translate }}</label>
+              for="customRadioInline6">{{"postYourResume.iNeedVisaAponsorship" | translate }}</label>
           </div>
           <app-control-messages [control]="f['work_authorization']"></app-control-messages>
-        </div>
-      </div>
-    </div> -->
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>{{"postYourResume.arYouWillingToRelocate" | translate }}?</label>
-         <div appMarkAsterisk class="mt-2">
-           <div class="custom-control custom-radio custom-control-inline">
-            <input (change)="onChangeFieldValue('willing_to_relocate', true)" [value]="true" formControlName="willing_to_relocate" type="radio" id="customRadioInline3" name="willing_to_relocate" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline3">{{"common.yes" | translate }}</label>
-          </div>
-          <div class="custom-control custom-radio custom-control-inline">
-            <input (change)="onChangeFieldValue('willing_to_relocate', false)" [value]="false" formControlName="willing_to_relocate" type="radio" id="customRadioInline4" name="willing_to_relocate" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline4">{{"common.no" | translate }}</label>
-          </div>
         </div>
       </div>
     </div>
@@ -96,6 +82,21 @@
     </div>
   </div>
   <div class="row mt-2">
+    <div class="col-lg-4 col-md-6">
+      <div class=" form-group">
+        <label>{{"postYourResume.arYouWillingToRelocate" | translate }}?</label>
+         <div appMarkAsterisk class="mt-2">
+           <div class="custom-control custom-radio custom-control-inline">
+            <input (change)="onChangeFieldValue('willing_to_relocate', true)" [value]="true" formControlName="willing_to_relocate" type="radio" id="customRadioInline3" name="willing_to_relocate" class="custom-control-input">
+            <label class="custom-control-label" for="customRadioInline3">{{"common.yes" | translate }}</label>
+          </div>
+          <div class="custom-control custom-radio custom-control-inline">
+            <input (change)="onChangeFieldValue('willing_to_relocate', false)" [value]="false" formControlName="willing_to_relocate" type="radio" id="customRadioInline4" name="willing_to_relocate" class="custom-control-input">
+            <label class="custom-control-label" for="customRadioInline4">{{"common.no" | translate }}</label>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="col-lg-4 col-md-6" *ngIf="(!childForm?.value?.jobPref?.remote_only && !childForm?.value?.jobPref?.willing_to_relocate)">
       <div class=" form-group">
         <label>{{"postYourResume.preferredLocation" | translate }}</label>
