--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -3,14 +3,14 @@
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"postYourResume.firstName" | translate }}</label>
-          <input appMarkAsterisk formControlName="first_name" type="text" class="form-control" placeholder="First Name">
+          <input appMarkAsterisk formControlName="first_name" type="text" class="form-control text-capitalize" placeholder="First Name">
           <app-control-messages [control]="f['first_name']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"postYourResume.lastName" | translate }}</label>
-          <input appMarkAsterisk formControlName="last_name" type="text" class="form-control" placeholder="Last Name">
+          <input appMarkAsterisk formControlName="last_name" type="text" class="form-control text-capitalize" placeholder="Last Name">
           <app-control-messages [control]="f['last_name']"></app-control-messages>
         </div>
       </div>
@@ -49,16 +49,16 @@
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"postYourResume.city" | translate}}</label>
-          <input appMarkAsterisk ngx-google-places-autocomplete
+          <input autocomplete="off" appMarkAsterisk ngx-google-places-autocomplete
           (onAddressChange)="handleAddressChange($event)"
-          formControlName="city" type="text" class="form-control" [placeholder]="'postYourResume.city' | translate">
+          formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.city' | translate">
           <app-control-messages [control]="f['city']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"postYourResume.state" | translate}}</label>
-          <input appMarkAsterisk formControlName="state" type="text" class="form-control" [placeholder]="'postYourResume.state' | translate">
+          <input appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
           <app-control-messages [control]="f['state']"></app-control-messages>
         </div>
       </div>
@@ -76,7 +76,7 @@
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
            <label>{{"postYourResume.country" | translate }}</label>
-          <input appMarkAsterisk formControlName="country" type="text" class="form-control" placeholder="Country">
+          <input appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" placeholder="Country">
           <app-control-messages [control]="f['country']"></app-control-messages>
         </div>
       </div>
@@ -86,9 +86,9 @@
     <div class="row mt-4">
       <div class="col-lg-4 col-md-6">
         <h6 class="font-weight-bold mt-4 clearfix cursor-pointer" (click)="show = !show">
-          {{"postYourResume.myLinks" | translate }} <i class="fas fa-caret-down pt-3 ml-3"></i></h6>
+          {{"postYourResume.myLinks" | translate }}<i class="fas fa-caret-down pt-3 ml-3"></i></h6>
       </div>
-      <div *ngIf="show" [@slideInOut] class="col-lg-12 col-md-6 mt-2">
+      <div *ngIf="show || savedUserDetails?.social_media_link?.length > 0" [@slideInOut] class="col-lg-12 col-md-6 mt-2">
         <div >
           <div class="row mt-4 mb-5">
             <div class="col-lg-4 col-md-6">
@@ -100,7 +100,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <div class="showhideswitch mt-2">
-                <input (change)="onSetLinks('linkedin', $event?.target?.checked);" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch5" >
+                <input  formControlName="linkedinBoolen" (change)="onSetLinks('linkedin', $event?.target?.checked);" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch5" >
                 <label class="showhideswitch-label" for="myshowhideswitch5">
                   <span class="showhideswitch-inner"></span>
                   <span class="showhideswitch-switch"></span>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <div class="showhideswitch mt-2">
-                <input (change)="onSetLinks('github', $event?.target?.value);" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch6" >
+                <input  formControlName="githubBoolen" (change)="onSetLinks('github', $event?.target?.checked);" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch6" >
                 <label class="showhideswitch-label" for="myshowhideswitch6">
                   <span class="showhideswitch-inner"></span>
                   <span class="showhideswitch-switch"></span>
@@ -136,7 +136,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <div class="showhideswitch mt-2">
-                <input (change)="onSetLinks('youtube', $event?.target?.value);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch7" >
+                <input formControlName="youtubeBoolen" (change)="onSetLinks('youtube', $event?.target?.checked);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch7" >
                 <label class="showhideswitch-label" for="myshowhideswitch7">
                   <span class="showhideswitch-inner"></span>
                   <span class="showhideswitch-switch"></span>
@@ -154,7 +154,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <div class="showhideswitch mt-2">
-                <input (change)="onSetLinks('blog', $event?.target?.value);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch8" >
+                <input formControlName="blogBoolen" (change)="onSetLinks('blog', $event?.target?.checked);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch8" >
                 <label class="showhideswitch-label" for="myshowhideswitch8">
                   <span class="showhideswitch-inner"></span>
                   <span class="showhideswitch-switch"></span>
@@ -172,7 +172,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <div class="showhideswitch mt-2">
-                <input (change)="onSetLinks('portfolio', $event?.target?.value);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch9" >
+                <input formControlName="portfolioBoolen" (change)="onSetLinks('portfolio', $event?.target?.checked);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch9" >
                 <label class="showhideswitch-label" for="myshowhideswitch9">
                   <span class="showhideswitch-inner"></span>
                   <span class="showhideswitch-switch"></span>
