--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -29,7 +29,11 @@
 							<div class="media">
 								<img [src]="userPhotoInfo?.base64 ? convertToImage(userPhotoInfo?.base64) : 'assets/images/user-img-icon.jpg'">
 								<div class="media-body">
-									<h6 class="mb-1">{{childForm?.value?.personalDetails?.phone}}	</h6>
+                  <h6>
+                    <a href="mailto:{{userInfo?.email}}">
+                    <i class="fas fa-envelope" *ngIf="userInfo?.email"></i> {{userInfo?.email}}</a>
+                    <i class="fas fa-mobile" *ngIf="childForm?.value?.personalDetails?.phone"></i> {{childForm?.value?.personalDetails?.phone}}
+                  </h6>
 									<h6 *ngIf="childForm?.value?.personalDetails?.social_media_link?.length">
                     <a class="mr-1" *ngFor="let item of childForm?.value?.personalDetails?.social_media_link" href="{{item.url}}" target="_blank">
                       <ng-container [ngSwitch]="item?.media">
@@ -58,10 +62,10 @@
 			<div class="row mt-3 info-box">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
-					  <li class="list-group-item">Total Years of Experience</li>
-					  <li class="list-group-item">Total SAP Experience</li>
-					  <li class="list-group-item">Domains Worked</li>
-					  <li class="list-group-item">Hands on Experience</li>
+					  <li class="list-group-item">{{"postJob.totalYearsOfExperience" | translate }}</li>
+              <li class="list-group-item">{{"postJob.totalYearsOfSapExperience" | translate }}</li>
+              <li class="list-group-item">{{"dashboard.domainsWorked" | translate }}</li>
+              <li class="list-group-item">{{"postYourResume.handsOnExperience" | translate }}</li>
 					</ul>
 				</div>
 				<div class="col-lg-8 info">
@@ -81,11 +85,11 @@
 				<div class="col-lg-12 border-top pt-3">	</div>
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
-					  <li class="list-group-item lg-mh-40">Knowledge on</li>
-					  <li class="list-group-item">Programming Skills</li>
-					  <li class="list-group-item">Others</li>
-            <li class="list-group-item">Certifications</li>
-            <li class="list-group-item text-capitalize">{{"postJob.endToEndImplementation" | translate }}</li>
+					  <li class="list-group-item lg-mh-40">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
+              <li class="list-group-item">{{"postJob.programmingSkills" | translate }}</li>
+              <li class="list-group-item">{{"postYourResume.others" | translate }}</li>
+              <li class="list-group-item">{{"postJob.certification" | translate }}</li>
+              <li class="list-group-item">{{"postJob.endToEndImplementation" | translate }}</li>
 					</ul>
 				</div>
 				<div class="col-lg-8 info">
@@ -105,10 +109,10 @@
 				<div class="col-lg-12 border-top pt-3">	</div>
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
-					  <li class="list-group-item">Clients worked with</li>
-					  <li class="list-group-item">Job Type</li>
-					  <li class="list-group-item">Roles Looking for</li>
-					  <li class="list-group-item">Remote</li>
+					  <li class="list-group-item">{{"postYourResume.clientsWorkedWith" | translate}}</li>
+            <li class="list-group-item">{{"postJob.jobType" | translate}}</li>
+            <li class="list-group-item">{{"postYourResume.rolesLookingFor" | translate }}</li>
+            <li class="list-group-item">{{"postJob.remote" | translate }}</li>
 					</ul>
 				</div>
 				<div class="col-lg-8 info">
@@ -131,15 +135,19 @@
 				<div class="col-lg-12 border-top pt-3">	</div>
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
-					  <li class="list-group-item">Available in</li>
-					  <li class="list-group-item">Travel</li>
-					  <li class="list-group-item">Willing to Relocate</li>
+					  <li class="list-group-item">{{"postJob.availableIn" | translate }}</li>
+              <li class="list-group-item">{{"postJob.workAuthorization" | translate }}</li>
+              <li class="list-group-item">{{"postJob.travel" | translate }}</li>
+              <li class="list-group-item">{{"postJob.willingToRelocate" | translate }}</li>
 					</ul>
 				</div>
 				<div class="col-lg-8 info">
 					<ul class="list-group">
 					  <li class="list-group-item">
               {{childForm?.value?.jobPref?.availability == 0 ? 'Immediate' : childForm?.value?.jobPref?.availability + ' Days'}}
+            </li>
+            <li class="list-group-item">
+              {{childForm?.value?.jobPref?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" | translate) : ("postYourResume.iNeedVisaAponsorship" | translate)}}
             </li>
              <li class="list-group-item">
               {{childForm?.value?.jobPref?.travel == 0 ? 'No' : childForm?.value?.jobPref?.travel + '%'}}
