--- a/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
+++ b/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
@@ -4,14 +4,26 @@
       <div class="col-lg-8 col-md-12">
         <div class="row">
           <div class="col-lg-12">
-            <div class="card job-card">
+            <app-contact-card
+            [userInfo]="userInfo"
+            [isEdit]="true"
+            [isResume]="true"
+            >
+            </app-contact-card>
+            <!-- <div class="card job-card">
               <div class="card-body">
                 <div class="row">
                   <div class="col-lg-7">
                     <h5>
-                      <a  href="javascript:;">Jacky Smith <small> - Project Manager</small></a>
+                      <a  href="javascript:;" class="text-capitalize">
+                        {{userInfo?.first_name + ' ' + userInfo?.last_name}}
+                        <small  class="text-capitalize" *ngIf="userInfo?.current_employer_role">
+                          - {{userInfo?.current_employer_role}}
+                        </small>
+                      </a>
                       <small (click)="onToggleContactInfoModal(true)" class="ml-2" type="button" data-toggle="modal" data-target="#contactModal"><i
-                          class="fas fa-address-card"></i> </small>
+                          class="fas fa-address-card"></i>
+                        </small>
                     </h5>
                   </div>
                   <div class="col-lg-5 text-right">
@@ -24,23 +36,36 @@
                   </div>
                 </div>
                 <div class="media">
-                  <img src="assets/images/user-img.jpg">
+                  <img [src]="userPhotoInfo?.base64 ? convertToImage(userPhotoInfo?.base64) : 'assets/images/user-img-icon.jpg'">
                   <div class="media-body">
-                    <h6>+91 9876543210 / 9876543222 </h6>
-                    <h6><a href="mailto:peter-parker2010@gmail.com">jacky-smith2010@gmail.com</a> <span
-                        class="mx-2">||</span> Austin, TX, USA</h6>
-                    <h6 class="mb-0">Tata Consultancy Services Ltd</h6>
-                      <h6 class="social-media">
-                        <span > <a href="#" class="linkIcon in"> <i class="fab fa-linkedin"></i> </a> </span>
-                        <span > <a href="#" class="linkIcon gh"> <i class="fab fa-github"></i> </a> </span>
-                        <span > <a href="#" class="linkIcon yt"> <i class="fab fa-youtube-square"></i> </a> </span>
-                        <span > <a href="#" class="linkIcon bl"> <i class="fas fa-blog"></i> </a> </span>
-                        <span > <a href="#" class="linkIcon pf"> <i class="fas fa-laptop-code"></i> </a> </span>
-                      </h6>
+                    <h6>
+                      <a href="mailto:{{userInfo?.email}}">
+                      <i class="fas fa-envelope"></i> {{userInfo?.email}}</a>
+                      <i class="fas fa-mobile"></i> {{userInfo?.phone}}
+                    </h6>
+                    <h6 *ngIf="userInfo?.social_media_link?.length">
+                      <a class="mr-1" *ngFor="let item of userInfo?.social_media_link" href="{{item.url}}" target="_blank">
+                        <ng-container [ngSwitch]="item?.media">
+                          <ng-container *ngSwitchCase="'youtube'">
+                            <i class="fab fa-youtube-square"></i>
+                          </ng-container>
+                          <ng-container *ngSwitchCase="'portfolio'">
+                            <i class="fas fa-laptop-code"></i>
+                          </ng-container>
+                          <ng-container *ngSwitchCase="'blog'">
+                            <i class="fas fa-blog"></i>
+                          </ng-container>
+                          <ng-container *ngSwitchDefault>
+                            <i class="fab fa-{{item.media}}"></i>
+                          </ng-container>
+                        </ng-container>
+                      </a>
+                    </h6>
+                    <h6 class="mb-0 text-capitalize">{{userInfo?.current_employer}}</h6>
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="row mt-3 info-box">
@@ -54,35 +79,66 @@
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
-              <li class="list-group-item">8+ Years</li>
-              <li class="list-group-item">5+ Years</li>
-              <li class="list-group-item">Automotive, Logistics, Finance</li>
-              <li class="list-group-item">SAP PM, SAP MM, SAP Mobility</li>
+              <li class="list-group-item text-capitalize">{{userInfo?.experience ? userInfo?.experience + ' Years' : '--'}}</li>
+              <li class="list-group-item text-capitalize">{{userInfo?.sap_experience ? userInfo?.sap_experience + ' Years': '--'}} </li>
+              <li class="list-group-item text-capitalize">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+              <li class="list-group-item text-uppercase">
+                <ng-container *ngIf="userInfo?.hands_on_experience?.length; else elseHandsTemplate">
+                  <p class="m-0 w-100 float-left" *ngFor="let item of userInfo?.hands_on_experience">
+                    <span class="text-wrap-custom float-left">{{item?.skill_id ? sharedService.onFindSkillsFromSingleID(item?.skill_id)?.tag : '--'}}</span>
+                    <span *ngIf="item?.skill_id">({{item?.experience + ' ' + item?.exp_type}})</span>
+                  </p>
+                </ng-container>
+                <ng-template #elseHandsTemplate>
+                  <p>--</p>
+                </ng-template>
+
+
+              </li>
             </ul>
           </div>
 
           <div class="col-lg-12 border-top pt-3"> </div>
           <div class="col-lg-4 caption">
             <ul class="list-group">
-              <li class="list-group-item">{{"postYourResume.handsOnExperience" | translate }}/li>
+              <li class="list-group-item lg-mh-40">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
               <li class="list-group-item">{{"postJob.programmingSkills" | translate }}</li>
               <li class="list-group-item">{{"postYourResume.others" | translate }}</li>
               <li class="list-group-item">{{"postJob.certification" | translate }}</li>
+              <li class="list-group-item">{{"postJob.endToEndImplementation" | translate }}</li>
             </ul>
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
+              <li class="list-group-item text-uppercase lg-mh-40">
+                <ng-container *ngIf="userInfo?.skills?.length; else elseSkillsTemplate">
+                  <p class="m-0 w-100 float-left" *ngFor="let item of userInfo?.skills">
+                    <span class="text-wrap-custom float-left">{{item ? sharedService.onFindSkillsFromSingleID(item)?.tag: '--'}}</span>
+                  </p>
+                </ng-container>
+                <ng-template #elseSkillsTemplate>
+                  <p>--</p>
+                </ng-template>
+
+
+              </li>
+              <li class="list-group-item text-capitalize">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+              <li class="list-group-item text-capitalize">{{utilsHelperService.onConvertArrayToString(userInfo?.other_skills)}}</li>
+              <li class="list-group-item text-capitalize">{{utilsHelperService.onConvertArrayToString(userInfo?.certification)}}</li>
+              <li class="list-group-item text-capitalize">{{userInfo?.end_to_end_implementation ? userInfo?.end_to_end_implementation : '--'}}</li>
+            </ul>
+            <!-- <ul class="list-group">
               <li class="list-group-item">SAP Mobility, SAP FICO</li>
               <li class="list-group-item">Java, Python</li>
               <li class="list-group-item">Python, SAP BODS</li>
               <li class="list-group-item">SAP Mobility</li>
-            </ul>
+            </ul> -->
           </div>
 
           <div class="col-lg-12 border-top pt-3"> </div>
           <div class="col-lg-4 caption">
             <ul class="list-group">
-              <li class="list-group-item">Clients worked with</li>
+              <li class="list-group-item">{{"postYourResume.clientsWorkedWith" | translate}}</li>
               <li class="list-group-item">{{"postJob.jobType" | translate}}</li>
               <li class="list-group-item">{{"postYourResume.rolesLookingFor" | translate }}</li>
               <li class="list-group-item">{{"postJob.remote" | translate }}</li>
@@ -90,10 +146,18 @@
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
-              <li class="list-group-item">Google, SAP</li>
-              <li class="list-group-item">Full Time, Part Time, Freelancer</li>
-              <li class="list-group-item">Senior Consultant</li>
-              <li class="list-group-item">Yes</li>
+              <li class="list-group-item text-capitalize">
+                {{utilsHelperService.onConvertArrayToString(userInfo?.clients_worked)}}
+              </li>
+              <li class="list-group-item text-capitalize">
+                {{(userInfo?.job_type || userInfo?.job_type == 0) ? sharedService.onGetJobType(userInfo?.job_type) : '--'}}
+              </li>
+              <li class="list-group-item text-capitalize">
+                {{userInfo?.job_role ? userInfo?.job_role : '--'}}
+              </li>
+              <li class="list-group-item text-capitalize">
+                {{utilsHelperService.onGetYesOrNoValue(userInfo?.remote_only)}}
+              </li>
             </ul>
           </div>
 
@@ -108,10 +172,18 @@
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
-              <li class="list-group-item">30 Days</li>
-              <li class="list-group-item">H1B</li>
-              <li class="list-group-item">No</li>
-              <li class="list-group-item">Yes</li>
+              <li class="list-group-item">
+                {{(userInfo?.availability || userInfo?.availability == 0) ? (userInfo?.availability == 0 ? 'Immediate' : userInfo?.availability + ' Days') : '--'}}
+              </li>
+              <li class="list-group-item">
+                {{(userInfo?.work_authorization || userInfo?.work_authorization == 0) ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" | translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+              </li>
+               <li class="list-group-item">
+                {{(userInfo?.travel || userInfo?.travel == 0) ? userInfo?.travel == 0 ? 'No' : userInfo?.travel + '%' : '--'}}
+              </li>
+              <li class="list-group-item">
+                {{utilsHelperService.onGetYesOrNoValue(userInfo?.willing_to_relocate)}}
+              </li>
             </ul>
           </div>
         </div>
@@ -123,7 +195,8 @@
   </div>
 </section>
 
-<app-contact-info
+<!-- <app-contact-info
+[userInfo]="userInfo"
 *ngIf="isOpenedContactInfoModal"
 [toggleContactInfoModal]="isOpenedContactInfoModal"
 (onEvent)="onToggleContactInfoModal($event)"
@@ -133,4 +206,4 @@
 *ngIf="isOpenedResumeModal"
 [toggleResumeModal]="isOpenedResumeModal"
 (onEvent)="onToggleResumeForm($event)">
-</app-resume-modal>
+</app-resume-modal> -->
